--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#842c91" />
     <meta name="description" content="Post and comment here on Sigar" />
     <meta
       name="image"
       property="og:image"
-      content="https://live.staticflickr.com/65535/52104800701_a22ec8d0f2_k.jpg"
+content="/assets/img/preview.jpg"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
